# amazon-cloudfront-client-routing-library

./: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: amazon-cloudfront-client-routing-library-issue.md
.github/workflows/: ci.yml
src/: bitwise.rs  client_routing_label.rs  encode_decode.rs  errors.rs  hash.rs  ip.rs  lib.rs
tests/: decode.rs  encode.rs
